RESOLVED FIXED 60001
REGRESSION(r84672): showTree doesn't work for input/textarea elements
https://bugs.webkit.org/show_bug.cgi?id=60001
Summary REGRESSION(r84672): showTree doesn't work for input/textarea elements
Ryosuke Niwa
Reported 2011-05-02 18:37:40 PDT
After http://trac.webkit.org/changeset/84672, calling showTreeForThis doesn't show the shadow DOM tree for input / textarea elements.
Attachments
fixes the bug (1.89 KB, patch)
2011-05-02 18:42 PDT, Ryosuke Niwa
jamesr: review+
Ryosuke Niwa
Comment 1 2011-05-02 18:42:17 PDT
Created attachment 92031 [details] fixes the bug
Ryosuke Niwa
Comment 2 2011-05-02 18:46:52 PDT
Dimitri Glazkov (Google)
Comment 3 2011-05-02 19:18:40 PDT
Hey that looks cool! I am pretty sure though that this isn't a regression. Prior to r84672, showTreeForThis was blissfully unaware of any kind of shadow DOM.
Ryosuke Niwa
Comment 4 2011-05-02 19:26:53 PDT
(In reply to comment #3) > Hey that looks cool! I am pretty sure though that this isn't a regression. Prior to r84672, showTreeForThis was blissfully unaware of any kind of shadow DOM. Right but prior to r84672, the root node was div so we could still see the shadow tree if showTree was called on a shadow node. However, after the change, we walk up the tree using parentOrHostNode, making it impossible to dump any shadow nodes for input/textarea.
Note You need to log in before you can comment on or make changes to this bug.