2011-05-02  Ryosuke Niwa  <rniwa@webkit.org>

Reviewed by James Robinson.

        REGRESSION(r84672): showTree doesn't work for input/textarea elements
        https://bugs.webkit.org/show_bug.cgi?id=60001

        When shadow is null, try retrieving the inner element of a render text control.

        * dom/Node.cpp:
        (WebCore::traverseTreeAndMark):


git-svn-id: svn://svn.chromium.org/blink/trunk@85572 bbb929c8-8fbe-4397-9dbb-9b2b20218538